# rl_sar

./: .gitignore  README.md  README_CN.md  build.sh
policy/go2/: base.yaml
policy/go2/default/: config.yaml  policy.onnx
policy/go2/dreamflex/: config.yaml  policy.onnx
policy/go2/dreamwaq/: config.yaml  policy.onnx
policy/go2/robot_lab/: config.yaml  policy.onnx
policy/go2w/: base.yaml
policy/go2w/default/: config.yaml  policy.onnx
policy/go2w/dreamwaq/: config.yaml
policy/go2w/robot_lab/: config.yaml
scripts/: download_inference_runtime.sh  download_robot_descriptions.sh  setup_unitree_thirdparty_runtime.sh
src/rl_sar/: CMakeLists.txt
src/rl_sar/fsm_robot/: fsm_all.hpp  fsm_go2.hpp  fsm_go2w.hpp
src/rl_sar/include/: rl_real_go2.hpp  rl_sim_mujoco.hpp
src/rl_sar/src/: rl_real_go2.cpp  rl_sim_mujoco.cpp
src/rl_sar/test/: test_inference_runtime.cpp
src/rl_sar_zoo/: README.md
